Add recipes html webpages
- Create burger.html apple_pie.html files inside the recipes directory
- Add images, an unordered list of ingredients, and one ordered list of the
steps to make the dish.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,14 @@
     <h1>Odin Recipes</h1>
     <br>
 
-    <a href="../odin-recipes/recipes/lasagna.html">Lasagna</a>
+    <h3>Our recipes:</h3>
+
+    <ul>
+      <li><a href="./recipes/lasagna.html">Lasagna</a></li>
+      <li><a href="./recipes/burger.html">Hamburger</a></li>
+      <li><a href="./recipes/apple_pie.html">Apple pie</a></li>
+    </ul>
+    
 
   </body>
 </html>
