--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -5,10 +5,39 @@
     <title>Lasagna</title>
   </head>
   <body>
-    
+    <a href="../index.html">Main menu</a>
+    <br><br>
+
     <h1>Lasagna</h1>
     <br>
-    <a href="../index.html">Main menu</a>
+    <img src="../img/lasagna1.webp" alt="Lasagna's dish image" width="250px">
+    <br>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint fugiat 
+      repudiandae quibusdam impedit nisi? Repellendus laboriosam deserunt officia!
+      Numquam rerum asperiores hic fugit minus facere obcaecati sit dolor, veniam expedita?
+    </p>
+
+    <h2>Ingredients:</h2>
+    <ul>
+      <li>Meat</li>
+      <li>Onion and garlic</li>
+      <li>Tomato products</li>
+      <li>Sugar</li>
+      <li>Spices and seasoning</li>
+      <li>Lasagna noodles</li>
+    </ul>
+    <br>
+
+    <h2>Steps:
+      <ol>
+        <li>Make the meat sauce.</li>
+        <li>Cook the noodles.</li>
+        <li>Make the ricotta mixture.</li>
+        <li>Layer the lasagna according to the recipe instruccions.</li>
+        <li>Cover with foil and bake.</li>
+        <li>Let the lasagna rest before serving.</li>
+      </ol>
+    </h2>
 
   </body>
 </html>
